--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,4 +28,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Deploying to S3 bucket
-        run: aws s3 sync ./dist/ s3::/business-card-bucket --delete
+        run: aws s3 sync ./dist/ s3://business-card-bucket --delete
